# show-me-the-stock

./: .gitignore  Dockerfile  README.md  config.py  main.py  phase.md  pyproject.toml
deploy/: teamcity-build.sh
deploy/show-me-the-stock/: Chart.yaml  values.yaml
deploy/show-me-the-stock/templates/: deployment.yaml  ingress.yaml  service.yaml
pages/: prediction.py
src/ai/: gemini_analyzer.py
src/data/: interest_rate_data.py  stock_data.py
src/models/: backtesting.py  hf_integration.py  hybrid_model.py  performance_metrics.py
src/utils/: helpers.py
web-version/: .env.example  .gitignore  ARCHITECTURE.md  FINANCIAL_DATA_REQUIREMENTS.md  GEMINI_SETUP.md  Makefile  PHASE3_REVISED.md  README.md  docker-compose.yml
web-version/backend/: API_ENDPOINTS.md  Dockerfile  KOREAN_INDEX_COLLECTION_ISSUE.md  MIGRATION_PROGRESS.md  MIGRATION_SUMMARY.md  PYKRX_MIGRATION_PLAN.md  README.md  pyproject.toml  requirements.txt  start_backend.sh  test_collector_v2.py  test_fdr.py  test_providers.py
web-version/backend/app/: main.py
web-version/backend/app/ai/: gemini_analyzer.py
web-version/backend/app/api/v1/: ai_recommendations.py  api.py  backtest.py  chat.py  data_cleanup.py  data_collection.py  data_collection_unified.py
web-version/backend/app/api/v1/deprecated/: data_collection.py  data_collection_v3.py
web-version/backend/app/api/v1/endpoints/: ai_analysis.py  indices.py  interest_rates.py  news.py  predictions.py  quant.py  realtime.py  stocks.py  stocks_search.py  stocks_v2.py
web-version/backend/app/collectors/: __init__.py  index_data_collector.py  scheduler.py  stock_data_collector.py  stock_data_collector_v2.py  stock_data_collector_v3.py  us_stock_list.py
web-version/backend/app/core/: cache.py  config.py  redis_client.py  websocket_manager.py
web-version/backend/app/data/: base_stock_data_provider.py  fdr_data_provider.py  hybrid_data_provider.py  interest_rate_data.py  pykrx_data_provider.py  pykrx_stock_data.py  stock_data.py  stock_data_provider_factory.py  yahoo_data_provider.py
web-version/backend/app/database/: mongodb_client.py  mongodb_schema.py
web-version/backend/app/models/: advanced_predictor.py  simple_ensemble.py  stock.py
web-version/backend/app/services/: ai_analysis.py  ai_recommendation_service.py  backtest_service.py  cache_scheduler.py  index_data_service.py  limited_quant_service.py  mongodb_quant_service.py  mongodb_stock_service.py  quant_service.py  quant_service_factory.py  real_financial_data.py  realtime_service.py  recommendation_service.py  stock_service.py  stock_service_factory.py
web-version/backend/app/utils/: helpers.py
web-version/backend/docs/: DATA_COLLECTION_API.md  DATA_COLLECTION_V3.md
web-version/backend/scripts/: data_collection_example.py  fix_samsung_active.py
web-version/frontend/: Dockerfile  LOADING_ISSUE_FIX.md  SUPABASE_SETUP_INSTRUCTIONS.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
web-version/frontend/public/: index.html  manifest.json
web-version/frontend/src/: App.css  App.tsx  config.ts  index.css
web-version/frontend/src/components/: Dashboard.css  Dashboard.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  MainContent.css  MainContent.tsx  MarketOverview.css  MarketOverview.tsx  NotificationPanel.css  NotificationPanel.tsx  Pagination.css  Pagination.tsx  ProfessionalStockChart.css  ProfessionalStockChart.tsx  SearchResults.css  SearchResults.tsx  Sidebar.css  Sidebar.tsx  StockDetail.css  StockDetail.tsx  StockList.css  StockList.tsx  ViewManager.css  ViewManager.tsx
web-version/frontend/src/context/: AppContext.tsx  AuthContext.tsx  ThemeContext.tsx
web-version/frontend/src/lib/: supabase.ts
(+42 files in other folders)
