[project]
name = "show-me-the-stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.0",
    "chronos-forecasting>=1.5.2",
    "datasets>=3.6.0",
    "datetime>=5.5",
    "finance-datareader>=0.9.96",
    "fredapi>=0.5.2",
    "google-genai>=1.21.1",
    "huggingface-hub>=0.33.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "optuna>=4.4.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.28.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "yfinance>=0.2.0",
]
